--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -43,7 +43,7 @@ CONFIG_EFI_PARTITION=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_BFQ=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8974=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
@@ -611,7 +611,6 @@ CONFIG_PRINTK_TIME=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
-# CONFIG_ARM_UNWIND is not set
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
