--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -593,7 +593,8 @@ CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
-# CONFIG_MISC_FILESYSTEMS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
 CONFIG_CIFS=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
