--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -3,7 +3,6 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-big-bum"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
-# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
@@ -100,6 +99,7 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
+CONFIG_ZSMALLOC=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
@@ -272,6 +272,8 @@ CONFIG_NFC_BCM2079X=y
 CONFIG_CMA=y
 CONFIG_CMA_RESERVE_DEFAULT_AREA=y
 CONFIG_PROC_DEVICETREE=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
