--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -3,6 +3,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-big-bum"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZ4=y
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
