--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -100,6 +100,7 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
+CONFIG_CLEANCACHE=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
@@ -597,6 +598,9 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_PFT=y
 CONFIG_MSM_IOMMU_V1=y
 CONFIG_IOMMU_PGTABLES_L2=y
+CONFIG_PM_DEVFREQ=y
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
