--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -619,6 +619,7 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_PRINTK_TIME=y
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 # CONFIG_ENABLE_MUST_CHECK is not set
+CONFIG_DEBUG_FS=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
