--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1711,6 +1711,10 @@ config HOTPLUG_CPU
 	  Say Y here to experiment with turning CPUs off and on.  CPUs
 	  can be controlled through /sys/devices/system/cpu.
 
+config MAKO_HOTPLUG
+	bool "Mako hotplug from Franco"
+	default y
+
 config LOCAL_TIMERS
 	bool "Use local timer interrupts"
 	depends on SMP
