make ASMP dependent on !MAKO_HOTPLUG
Signed-off-by: Stefanescu Cristian <howerkraft@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1649,7 +1649,7 @@ config SCHED_MC
 
 config ASMP
 	bool "Multi-core automatic hotplug support"
-	depends on SMP
+	depends on (SMP && !MAKO_HOTPLUG)
 	default n
 	help
 	  Automatically hotplugs the multiple cpu cores on and off
