--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -89,7 +89,9 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
 # CONFIG_ARM_CPU_TOPOLOGY is not set
+CONFIG_ASMP=y
 CONFIG_ARM_ARCH_TIMER=y
+# CONFIG_MAKO_HOTPLUG is not set
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
