msm: limiter: disable if mako_hotplug is enabled mako_hotplug has it's own limiter built-in
Signed-off-by: Stefanescu Cristian <howerkraft@gmail.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2888,7 +2888,7 @@ config MSM_DCVS
 
 config MSM_LIMITER
 	bool "MSM Frequency Limiter Driver"
-	depends on (LCD_NOTIFY || POWERSUSPEND || HAS_EARLYSUSPEND)
+	depends on (!MAKO_HOTPLUG && (LCD_NOTIFY || POWERSUSPEND || HAS_EARLYSUSPEND))
 	default y
 	help
 	  The MSM Frequency Limiter Driver controls max frequency limit for each CPU
