--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2889,7 +2889,7 @@ config MSM_DCVS
 config MSM_LIMITER
 	bool "MSM Frequency Limiter Driver"
 	depends on (!MAKO_HOTPLUG && (LCD_NOTIFY || POWERSUSPEND || HAS_EARLYSUSPEND))
-	default y
+	default n
 	help
 	  The MSM Frequency Limiter Driver controls max frequency limit for each CPU
 	  to desired value on suspend/resume
