--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -81,6 +81,7 @@ CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_SENSORS_ADSP=y
+CONFIG_BLU_PLUG=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 CONFIG_MSM_UARTDM_Core_v14=y
 CONFIG_STRICT_MEMORY_RWX=y
@@ -89,7 +90,6 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
 # CONFIG_ARM_CPU_TOPOLOGY is not set
-CONFIG_ASMP=y
 CONFIG_ARM_ARCH_TIMER=y
 # CONFIG_MAKO_HOTPLUG is not set
 CONFIG_PREEMPT=y
