defconfig: update https://github.com/neobuddy89/hammerhead_kernel_caf/commit/a578168261ce29bcd8776013f39e1b1eb716474f
Signed-off-by: Stefanescu Cristian <howerkraft@gmail.com>

--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -372,7 +372,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO is not set
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_MSM_HS=y
-CONFIG_DIAG_CHAR=y
+# CONFIG_DIAG_CHAR is not set
+# CONFIG_DIAG_OVER_USB is not set
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_ADSPRPC=y
@@ -572,8 +573,6 @@ CONFIG_SWITCH_MAX1462X=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_QPNP=y
-CONFIG_UIO=y
-CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
