--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -111,6 +111,15 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 config CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE
 	bool "blu_active"
 	select CPU_FREQ_GOV_BLU_ACTIVE
+
+config CPU_FREQ_DEFAULT_GOV_BACON
+	bool "bacon"
+	select CPU_FREQ_GOV_BACON
+	help
+	  Use the CPUFreq governor 'bacon' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'bacon' governor for latency-sensitive workloads.
 	help
 	  Use the CPUFreq governor 'blu_active' as default. This allows
 	  you to get a full dynamic cpu frequency capable system by simply
@@ -186,6 +195,23 @@ config CPU_FREQ_GOV_INTERACTIVE
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_interactive.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_BACON
+	tristate "'bacon' cpufreq policy governor"
+	help
+	  'bacon' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_bacon.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
 
