--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -110,6 +110,7 @@ CONFIG_KEXEC_HARDBOOT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_BACON=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
