--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -86,6 +86,7 @@ CONFIG_SENSORS_ADSP=y
 CONFIG_MSM_LIMITER=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 CONFIG_MSM_UARTDM_Core_v14=y
+CONFIG_FORCE_INSTRUCTION_ALIGNMENT=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_ARM_ERRATA_775420=y
 CONFIG_NO_HZ=y
