--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -365,6 +365,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO is not set
+# CONFIG_VT_CONSOLE is not set
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_MSM_HS=y
 # CONFIG_DIAG_CHAR is not set
@@ -405,6 +406,7 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
+# CONFIG_RC_CORE is not set
 # CONFIG_MSM_CAMERA is not set
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_EEPROM=y
@@ -447,6 +449,7 @@ CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
+# CONFIG_RADIO_ADAPTERS is not set
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
