defconfig: sync with cm/google
Signed-off-by: Stefanescu Cristian <howerkraft@gmail.com>

--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -91,6 +91,7 @@ CONFIG_ARM_ERRATA_775420=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
+# CONFIG_ARM_CPU_TOPOLOGY is not set
 CONFIG_ARM_ARCH_TIMER=y
 # CONFIG_MAKO_HOTPLUG is not set
 CONFIG_PREEMPT=y
@@ -99,7 +100,6 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
-CONFIG_CLEANCACHE=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
@@ -265,6 +265,7 @@ CONFIG_NL80211_TESTMODE=y
 CONFIG_RFKILL=y
 CONFIG_NFC_BCM2079X=y
 CONFIG_CMA=y
+CONFIG_CMA_AREAS=7
 CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
@@ -282,7 +283,6 @@ CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
@@ -366,6 +366,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO is not set
 # CONFIG_VT_CONSOLE is not set
 # CONFIG_LEGACY_PTYS is not set
+# CONFIG_FRANDOM is not set
 CONFIG_SERIAL_MSM_HS=y
 # CONFIG_DIAG_CHAR is not set
 # CONFIG_DIAG_OVER_USB is not set
