--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -40,7 +40,7 @@ CONFIG_EFI_PARTITION=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_ROW=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8974=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
