--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -100,6 +100,8 @@ CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_UACCESS_WITH_MEMCPY=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
 CONFIG_USE_OF=y
