--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -58,6 +58,7 @@ CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 # CONFIG_MSM_RESET_MODEM is not set
+# CONFIG_MSM_SMD_LOGGING is not set
 # CONFIG_MSM_SMD_TTY is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
@@ -99,7 +100,6 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
-CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_ARM_PLD_64BYTE=y
 CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_CC_STACKPROTECTOR=y
