--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -29,6 +29,7 @@ CONFIG_RD_LZMA=y
 CONFIG_RD_LZ4=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
+# CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
@@ -48,6 +49,7 @@ CONFIG_MACH_MSM8974_HAMMERHEAD=y
 CONFIG_LGE_HANDLE_PANIC=y
 CONFIG_LGE_BLUETOOTH=y
 # CONFIG_MSM_STACKED_MEMORY is not set
+# CONFIG_MSM_IDLE_STATS is not set
 CONFIG_CPU_HAS_L2_PMU=y
 # CONFIG_MSM_FIQ_SUPPORT is not set
 # CONFIG_MSM_PROC_COMM is not set
@@ -84,8 +86,6 @@ CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_SENSORS_ADSP=y
-CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
-CONFIG_MSM_UARTDM_Core_v14=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_ARM_ERRATA_775420=y
 CONFIG_NO_HZ=y
@@ -100,6 +100,7 @@ CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_KSM_CHECK_PAGE=y
+CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_ARM_PLD_64BYTE=y
 CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_CC_STACKPROTECTOR=y
@@ -271,6 +272,7 @@ CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
+CONFIG_TSPP=y
 CONFIG_HAPTIC_ISA1200=y
 CONFIG_MSM8974_PWM_VIBRATOR=y
 CONFIG_QSEECOM=y
@@ -283,7 +285,6 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
@@ -548,7 +549,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_STORAGE_ENE_UB6250=y
-CONFIG_USB_TRANCEVIBRATOR=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_G_ANDROID=y
