--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -85,6 +85,7 @@ CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_SENSORS_ADSP=y
 CONFIG_BLU_PLUG=y
+CONFIG_FORCE_INSTRUCTION_ALIGNMENT=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_ARM_ERRATA_775420=y
 CONFIG_NO_HZ=y
