--- a/arch/arm/configs/big-bum-mpd_defconfig
+++ b/arch/arm/configs/big-bum-mpd_defconfig
@@ -113,6 +113,7 @@ CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_BACON=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
