--- a/arch/arm/configs/big-bum_defconfig
+++ b/arch/arm/configs/big-bum_defconfig
@@ -91,7 +91,6 @@ CONFIG_ARM_ERRATA_775420=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
-# CONFIG_ARM_CPU_TOPOLOGY is not set
 CONFIG_ARM_ARCH_TIMER=y
 # CONFIG_MAKO_HOTPLUG is not set
 CONFIG_PREEMPT=y
@@ -583,6 +582,7 @@ CONFIG_LOGCAT_SIZE=32
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_CPUPOWER=y
 CONFIG_SPS=y
 CONFIG_USB_BAM=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
