--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -7,8 +7,6 @@ CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
@@ -28,6 +26,7 @@ CONFIG_RD_LZMA=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
 CONFIG_PERF_EVENTS=y
+# CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
@@ -80,6 +79,7 @@ CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_MEMORY_DUMP=y
 CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
+CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
@@ -99,7 +99,10 @@ CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
+CONFIG_KSM=y
 CONFIG_UACCESS_WITH_MEMCPY=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CP_ACCESS=y
 CONFIG_USE_OF=y
@@ -577,7 +580,6 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
-CONFIG_PERSISTENT_TRACER=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_SPS=y
@@ -609,9 +611,8 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 # CONFIG_ENABLE_MUST_CHECK is not set
+CONFIG_DEBUG_FS=y
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
-# CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
-CONFIG_FTRACE=y
 # CONFIG_ARM_UNWIND is not set
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
