--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -2,6 +2,7 @@
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-big-bum"
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_KERNEL_LZ4=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
@@ -622,4 +623,6 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
