--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -622,6 +622,8 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_XTS=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_AES_ARM=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_LZ4HC=y
