--- a/arch/arm/configs/franco_defconfig
+++ b/arch/arm/configs/franco_defconfig
@@ -110,6 +110,7 @@ CONFIG_KEXEC=y
 # CONFIG_ATAGS_PROC is not set
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_BACON=y
